--- a/package.json
+++ b/package.json
@@ -19,20 +19,33 @@
   "homepage": "https://github.com/thred",
   "repository": "https://github.com/thred/cache-picker.git",
   "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.7.6",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^3.2.2",
+    "gulp-print": "^2.0.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.12.2",
-    "merge-stream": "^1.0.0",
     "typescript": "^1.8.9",
-    "typings": "^0.7.12"
+    "typings": "^0.7.12",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-stream": "^3.1.0"
   },
   "dependencies": {
-    "bootstrap": "^3.3.6",
     "jquery": "^2.2.3",
+    "material-design-icons": "^2.2.3",
+    "materialize-css": "^0.97.6",
     "react": "^15.0.1",
-    "react-dom": "^15.0.1"
+    "react-dom": "^15.0.1",
+    "react-materialize": "^0.14.3"
   }
 }
