Basic instruction selection

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "rootDir": "./src/script",
         "module": "commonjs",
         "target": "es2015",
-        "noImplicitAny": false,
+        "noImplicitAny": true,
         "sourceMap": false,
         "jsx": "react"
     },
