--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,20 @@
 {
     "compilerOptions": {
-        "outDir": "./build/src/script",
-        "rootDir": "./src/script",
+        "outDir": "./build/src",
+        "rootDir": "./src",
         "module": "commonjs",
-        "target": "es2015",
+        "target": "es5",
         "noImplicitAny": true,
-        "sourceMap": false,
-        "jsx": "react"
+        "sourceMap": true,
+        "jsx": "react",
+        "removeComments": true,
+        "preserveConstEnums": true
     },
     "exclude": [
+        "backup",
+        "build",
         "dist",
         "node_modules",
-        "target",
         "typings"
     ]
 }
