Implemented unit conversions and fixed parentheses

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         "noImplicitAny": true,
         "sourceMap": true,
         "jsx": "react",
-        "removeComments": true,
+        "removeComments": false,
         "preserveConstEnums": true
     },
     "exclude": [
