Enabled procedures and variables

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,11 +7,8 @@
 			"request": "attach",
 			"port": 5858,
 			"address": "localhost",
-			"restart": false,
-			"sourceMaps": false,
-			"outDir": null,
-			"localRoot": "${workspaceRoot}",
-			"remoteRoot": null
+			"sourceMaps": true,
+			"outDir": "${workspaceRoot}/build"
 		}
 	]
 }
